feat(Builder): added multiple file support
